--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="construction-icon">🚧</div>
         <h1>Under Construction</h1>
         <p>This site is currently being built.</p>
-        <p>Check back soon!</p>
+        <p>Check back later!</p>
     </div>
 </body>
 </html>
